--- a/InStock/View/Base.lproj/Main.storyboard
+++ b/InStock/View/Base.lproj/Main.storyboard
@@ -371,7 +371,7 @@
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yuz-PD-uyS">
-                                                    <rect key="frame" x="0.0" y="122" width="95" height="27"/>
+                                                    <rect key="frame" x="5" y="122" width="145" height="30"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="95" id="4ZJ-UK-MIh"/>
                                                     </constraints>
@@ -379,23 +379,16 @@
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0Ld-rf-ldc">
-                                                    <rect key="frame" x="123" y="122" width="32" height="27"/>
-                                                    <state key="normal" title="Button"/>
-                                                    <buttonConfiguration key="configuration" style="plain" image="heart" catalog="system"/>
-                                                </button>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="Sm5-82-wFB" firstAttribute="leading" secondItem="leZ-TR-f43" secondAttribute="leading" id="0dC-v7-HgM"/>
-                                                <constraint firstAttribute="trailing" secondItem="0Ld-rf-ldc" secondAttribute="trailing" id="2eT-zp-d0P"/>
-                                                <constraint firstAttribute="bottom" secondItem="Yuz-PD-uyS" secondAttribute="bottom" constant="8" id="8Ns-pO-5bm"/>
                                                 <constraint firstAttribute="trailing" secondItem="Sm5-82-wFB" secondAttribute="trailing" id="JUy-2x-uvK"/>
-                                                <constraint firstItem="0Ld-rf-ldc" firstAttribute="top" secondItem="Sm5-82-wFB" secondAttribute="bottom" constant="8" id="Klh-4F-7RS"/>
-                                                <constraint firstAttribute="bottom" secondItem="0Ld-rf-ldc" secondAttribute="bottom" constant="8" id="N4x-cA-VfO"/>
+                                                <constraint firstItem="Yuz-PD-uyS" firstAttribute="leading" secondItem="leZ-TR-f43" secondAttribute="leading" constant="5" id="NUo-F7-dfs"/>
+                                                <constraint firstItem="Yuz-PD-uyS" firstAttribute="top" secondItem="Sm5-82-wFB" secondAttribute="bottom" constant="8" id="NhL-2O-uBG"/>
                                                 <constraint firstItem="Sm5-82-wFB" firstAttribute="top" secondItem="leZ-TR-f43" secondAttribute="top" constant="4" id="OIf-CA-mtA"/>
                                                 <constraint firstItem="Yuz-PD-uyS" firstAttribute="top" secondItem="Sm5-82-wFB" secondAttribute="bottom" constant="8" id="YiB-67-uOH"/>
-                                                <constraint firstItem="0Ld-rf-ldc" firstAttribute="leading" secondItem="Yuz-PD-uyS" secondAttribute="trailing" constant="28" id="ggv-VX-47K"/>
-                                                <constraint firstItem="Yuz-PD-uyS" firstAttribute="leading" secondItem="leZ-TR-f43" secondAttribute="leading" id="oho-uo-Srg"/>
+                                                <constraint firstAttribute="trailing" secondItem="Yuz-PD-uyS" secondAttribute="trailing" constant="5" id="ZRV-gn-frQ"/>
+                                                <constraint firstAttribute="bottom" secondItem="Yuz-PD-uyS" secondAttribute="bottom" constant="5" id="mPJ-zF-u9x"/>
                                             </constraints>
                                         </collectionViewCellContentView>
                                         <size key="customSize" width="155" height="157"/>
