--- a/InStock/View/Base.lproj/Main.storyboard
+++ b/InStock/View/Base.lproj/Main.storyboard
@@ -240,7 +240,9 @@
                                                 <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ydu-cO-OJe">
                                                     <rect key="frame" x="118" y="203" width="46" height="27"/>
                                                     <state key="normal" title="Button"/>
-                                                    <buttonConfiguration key="configuration" style="plain" image="heart" catalog="system"/>
+                                                    <buttonConfiguration key="configuration" style="plain" image="heart" catalog="system">
+                                                        <color key="baseForegroundColor" systemColor="systemRedColor"/>
+                                                    </buttonConfiguration>
                                                 </button>
                                             </subviews>
                                             <constraints>
@@ -256,6 +258,7 @@
                                         <connections>
                                             <outlet property="categoryImage" destination="Dnl-Ex-sU2" id="n1O-y1-lKb"/>
                                             <outlet property="categoryPrice" destination="aR8-hM-nLg" id="06S-TR-hNw"/>
+                                            <outlet property="favProduct" destination="Ydu-cO-OJe" id="zTD-da-w0n"/>
                                             <outlet property="productName" destination="0sJ-mq-ZLZ" id="ECw-BW-mry"/>
                                             <outlet property="productType" destination="2io-c8-nxh" id="yUM-9F-6oL"/>
                                         </connections>
@@ -308,6 +311,9 @@
                                     <barButtonItem width="8" style="plain" systemItem="fixedSpace" id="Jj2-Jd-IWj"/>
                                     <barButtonItem image="heart" catalog="system" id="JZs-k4-gCU">
                                         <color key="tintColor" red="0.12549019610000001" green="0.14901960780000001" blue="0.18039215689999999" alpha="1" colorSpace="calibratedRGB"/>
+                                        <connections>
+                                            <action selector="favBTN:" destination="Pdi-8b-ZUE" id="sDx-Oi-WFY"/>
+                                        </connections>
                                     </barButtonItem>
                                 </items>
                             </toolbar>
