--- a/InStock/View/Base.lproj/Main.storyboard
+++ b/InStock/View/Base.lproj/Main.storyboard
@@ -1421,18 +1421,18 @@
                                 <rect key="frame" x="0.0" y="59" width="393" height="633"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cartCell" rowHeight="121" id="DYC-VJ-Se6" customClass="CartViewCell" customModule="InStock" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="50" width="393" height="121"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cartCell" rowHeight="127" id="DYC-VJ-Se6" customClass="CartViewCell" customModule="InStock" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="50" width="393" height="127"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="DYC-VJ-Se6" id="i7f-Uc-kOQ">
-                                            <rect key="frame" x="0.0" y="0.0" width="393" height="121"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="393" height="127"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Mpw-g8-A3x">
-                                                    <rect key="frame" x="20" y="19" width="104" height="80"/>
+                                                    <rect key="frame" x="20" y="19" width="109" height="84"/>
                                                 </imageView>
                                                 <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mLb-wL-N6L">
-                                                    <rect key="frame" x="336.33333333333331" y="42" width="48.666666666666686" height="34.333333333333343"/>
+                                                    <rect key="frame" x="336.33333333333331" y="43.666666666666657" width="48.666666666666686" height="34.333333333333343"/>
                                                     <state key="normal" title="Button"/>
                                                     <buttonConfiguration key="configuration" style="plain" image="plus.circle" catalog="system">
                                                         <color key="baseForegroundColor" red="0.56862745100000001" green="0.19215686269999999" blue="0.45882352939999999" alpha="1" colorSpace="calibratedRGB"/>
@@ -1442,13 +1442,13 @@
                                                     </connections>
                                                 </button>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="100" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v9j-q7-OgB">
-                                                    <rect key="frame" x="308" y="50.666666666666664" width="29" height="19.999999999999993"/>
+                                                    <rect key="frame" x="308" y="53.666666666666664" width="29" height="19.999999999999993"/>
                                                     <fontDescription key="fontDescription" name="ComicSansMS-Bold" family="Comic Sans MS" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hTT-gW-NJ3">
-                                                    <rect key="frame" x="269" y="42" width="38.333333333333314" height="34.333333333333343"/>
+                                                    <rect key="frame" x="269" y="43.666666666666657" width="38.333333333333314" height="34.333333333333343"/>
                                                     <state key="normal" title="Button"/>
                                                     <buttonConfiguration key="configuration" style="plain" image="minus.circle" catalog="system">
                                                         <color key="baseForegroundColor" red="0.56862745100000001" green="0.19215686269999999" blue="0.45882352939999999" alpha="1" colorSpace="calibratedRGB"/>
@@ -1457,14 +1457,14 @@
                                                         <action selector="minusBtn:" destination="trL-ID-DTq" eventType="touchUpInside" id="krZ-S2-fiU"/>
                                                     </connections>
                                                 </button>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="aLz-E6-sEO">
-                                                    <rect key="frame" x="143" y="77" width="122" height="20"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="aLz-E6-sEO">
+                                                    <rect key="frame" x="148" y="77" width="117" height="39"/>
                                                     <fontDescription key="fontDescription" name="ComicSansMS-Bold" family="Comic Sans MS" pointSize="17"/>
                                                     <color key="textColor" red="0.56862745100000001" green="0.19215686269999999" blue="0.45882352939999999" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="8" translatesAutoresizingMaskIntoConstraints="NO" id="dtc-KU-ajZ">
-                                                    <rect key="frame" x="143" y="18.999999999999996" width="122" height="54.666666666666657"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="8" translatesAutoresizingMaskIntoConstraints="NO" id="dtc-KU-ajZ">
+                                                    <rect key="frame" x="148" y="19" width="117" height="51"/>
                                                     <attributedString key="attributedText">
                                                         <fragment content="Label">
                                                             <attributes>
@@ -1482,7 +1482,7 @@
                                                 <constraint firstAttribute="trailingMargin" secondItem="v9j-q7-OgB" secondAttribute="trailing" constant="36" id="1ze-H3-EGP"/>
                                                 <constraint firstAttribute="trailing" secondItem="Mpw-g8-A3x" secondAttribute="trailing" constant="269" id="4zc-An-R32"/>
                                                 <constraint firstItem="dtc-KU-ajZ" firstAttribute="top" secondItem="i7f-Uc-kOQ" secondAttribute="topMargin" constant="8" id="5J0-Y7-cTM"/>
-                                                <constraint firstItem="aLz-E6-sEO" firstAttribute="height" secondItem="dtc-KU-ajZ" secondAttribute="height" constant="-34.666666666666671" id="5Sx-uA-0Ot"/>
+                                                <constraint firstItem="aLz-E6-sEO" firstAttribute="height" secondItem="dtc-KU-ajZ" secondAttribute="height" constant="-12" id="5Sx-uA-0Ot"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="dtc-KU-ajZ" secondAttribute="trailing" constant="108" id="7gu-cR-SXE"/>
                                                 <constraint firstItem="aLz-E6-sEO" firstAttribute="trailing" secondItem="dtc-KU-ajZ" secondAttribute="trailing" id="A0W-M8-21q"/>
                                                 <constraint firstItem="v9j-q7-OgB" firstAttribute="centerY" secondItem="i7f-Uc-kOQ" secondAttribute="centerY" id="Aaa-oU-1Xi"/>
@@ -1503,7 +1503,7 @@
                                                 <constraint firstItem="aLz-E6-sEO" firstAttribute="leading" secondItem="dtc-KU-ajZ" secondAttribute="leading" id="e15-sO-Fvh"/>
                                                 <constraint firstItem="Mpw-g8-A3x" firstAttribute="leading" secondItem="i7f-Uc-kOQ" secondAttribute="leading" constant="20" symbolic="YES" id="pzf-jd-dfn"/>
                                                 <constraint firstAttribute="bottomMargin" secondItem="Mpw-g8-A3x" secondAttribute="bottom" constant="8" id="uIH-Ih-Lls"/>
-                                                <constraint firstItem="aLz-E6-sEO" firstAttribute="top" secondItem="dtc-KU-ajZ" secondAttribute="bottom" constant="3.3333333333333286" id="uq2-OO-Lvh"/>
+                                                <constraint firstItem="aLz-E6-sEO" firstAttribute="top" secondItem="dtc-KU-ajZ" secondAttribute="bottom" constant="7" id="uq2-OO-Lvh"/>
                                                 <constraint firstItem="hTT-gW-NJ3" firstAttribute="centerY" secondItem="mLb-wL-N6L" secondAttribute="centerY" id="w69-zj-pqq"/>
                                                 <constraint firstItem="Mpw-g8-A3x" firstAttribute="top" secondItem="i7f-Uc-kOQ" secondAttribute="topMargin" constant="8" id="y2d-rU-t1r"/>
                                             </constraints>
